--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css\eyewebstyle.css" type="text/css"/>
 		<meta name= "keywords" content= "bg, market, magazin, balkanica"/>
 		<!-- HTML meta refresh URL redirection -->
-		<meta http-equiv="refresh" content="0; url=html\mantenimiento.html"/>
+		<meta http-equiv="refresh" content="; url=html\mantenimiento.html"/>
 	</head>
 	<body>
 		<!--encabezado-->
