--- a/html/registro.html
+++ b/html/registro.html
@@ -30,7 +30,7 @@
 		<!--fin encabezado-->
 		<!--contenido de pagina de pagina-->
 		<div class="form">
-			<form action="mailto:eyereviews@protonmail" method="post">
+			<form action="..\php\info.php" method="post">
 				<fieldset>
 					<legend>Datos de acceso</legend>
 					<table>
