--- a/html/productos.html
+++ b/html/productos.html
@@ -152,7 +152,7 @@
 					</tr>
 					<tr>
 						<td><img type="img" id="imgproducto" src="..\img\productos\lacteos\400 GR KISELO MLYAKO KRAVE 3.6% MEGGLE.jpg" alt="400 GR KISELO MLYAKO KRAVE 3.6% MEGGLE"/></td>
-						<th id="nombreproducto">Yogur natual, 400gr, 3.6%. Meggle</th>
+						<th id="nombreproducto">Yogur natural, 400gr, 3.6%. Meggle</th>
 						<td>
 						Yogur natural de vaca (Kiselo Mlyako) elaborado con Lactobacillus Bulgaricus con 3,6% de grasa de leche de la marca Meggle<br/>
 						<details>
