--- a/html/productos.html
+++ b/html/productos.html
@@ -13,7 +13,7 @@
 			<table>
 				<tr>
 					<td>
-						<a href="..\index.html""><img type="img" id="logo" src="..\img\bgmarketlogo.png" alt="BGMarketLogo"/></a>
+						<a href="..\index.html"><img type="img" id="logo" src="..\img\bgmarketlogo.png" alt="BGMarketLogo"/></a>
 					</td>
 					<td>
 						<ul class="navbar">
@@ -173,7 +173,7 @@
 						<td>8,00€</td>
 					</tr>
 					<tr>
-						<td><img type="img" id="imgproducto" src="..\img\productos\lacteos\0.5 L BEBIDA BOZA BALKANICA.jpg" alt=""/></td>
+						<td><img type="img" id="imgproducto" src="..\img\productos\lacteos\0.5 L BEBIDA BOZA BALKANICA.jpg" alt="0.5 L BEBIDA BOZA BALKANICA.jpg"/></td>
 						<th id="nombreproducto">Boza, bebida, 0.5.</th>
 						<td>
 						Boza, bebida de 0.5L, como complemento a Banitsa<br/>
@@ -258,7 +258,7 @@
 						<td>1,00€</td>
 					</tr>
 					<tr>
-						<td><img type="img" id="imgproducto" src="..\img\productos\dulces\90 GR CARAMELOS DROPS VIOLETAS ZZGO.jpg" alt=""/></td>
+						<td><img type="img" id="imgproducto" src="..\img\productos\dulces\90 GR CARAMELOS DROPS VIOLETAS ZZGO.jpg" alt="90 GR CARAMELOS DROPS VIOLETAS ZZGO"/></td>
 						<th id="nombreproducto">Caramelos sabor violetas</th>
 						<td>
 						caramelos de sabor a violetas. de ZZGO<br/>
