--- a/html/quienes.html
+++ b/html/quienes.html
@@ -13,7 +13,7 @@
 			<table>
 				<tr>
 					<td>
-						<a href="..\index.html""><img type="img" id="logo" src="..\img\bgmarketlogo.png" alt="BGMarketLogo"/></a>
+						<a href="..\index.html"><img type="img" id="logo" src="..\img\bgmarketlogo.png" alt="BGMarketLogo"/></a>
 					</td>
 					<td>
 						<ul class="navbar">
