--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<table>
 				<tr>
 					<td>
-						<a href="index.html""><img type="img" id="logo" src="img\bgmarketlogo.png" alt="BGMarketLogo"/></a>
+						<a href="index.html"><img type="img" id="logo" src="img\bgmarketlogo.png" alt="BGMarketLogo"/></a>
 					</td>
 					<td>
 						<ul class="navbar">
