--- a/html/productos.html
+++ b/html/productos.html
@@ -31,7 +31,7 @@
 		<!--fin encabezado-->
 		<!--contenido de pagina de pagina-->
 		<div>
-			<table id="productos">
+			<table class="productos">
 				<thead>
 					<tr>
 						<th>Imagen del producto</th>
@@ -48,7 +48,7 @@
 						<th>Precio (€)</th>
 					</tr>
 				</tfoot>
-				<tbody>
+				<tbody class="productos2">
 					<tr>
 						<td><img type="img" id="imgproducto" src="..\img\productos\otros\60 GR ALMIDON FRESA BIOSET.jpg" alt="60 GR ALMIDON FRESA BIOSET"/></td>
 						<th id="nombreproducto">Almidón de Fresa, 60gr. Bioset</th>
@@ -64,7 +64,8 @@
 							Maiz<br/>
 							Trigo<br/>
 							Frambuesa<br/>
-							Kiwi,Limón<br/>
+							Kiwi<br/>
+							Limón<br/>
 							Melocotón<br/>
 							Naranja<br/>
 							Vainilla<br/>
