--- a/html/productos.html
+++ b/html/productos.html
@@ -321,7 +321,7 @@
 						Parillada Familiar compuesta de longaniza sin tripa (Kebapche) y albondigas. Producto de carne de cerdo.<br/>
 						<details>
 							<summary>Más información</summary>
-							<p>Se venden albondigas y longanizas en bandeja por separado (12uds en banejda). Mismo precio.</p>
+							<p>Se venden albondigas y longanizas en bandeja por separado (12uds en bandejda). Mismo precio.</p>
 						</details>
 						</td>
 						<td>5,50€</td>
