--- a/html/registro.html
+++ b/html/registro.html
@@ -60,7 +60,7 @@
 							<td><input type="text" name="apellidos" id="surname" size="40em"/></td>
 						</tr>
 						<tr>
-							<td><label for="fechanacimiento">Fecha nacimiento (dd/mm/aaaa):</label></td>
+							<td><label for="fechanacimiento">Fecha de nacimiento:</label></td>
 						</tr>
 						<tr>
 							<td><input type="date" name="fechanacimiento" id="fechanacimiento" size="10"/></td>
@@ -78,7 +78,7 @@
 							<td><label for="provincia">Provincia:</label></td>
 						</tr>
 						<tr>
-							<td><input type="text" name="localidad" id="localidad" size="30"/></td>
+							<td><input type="text" name="localidad" id="localidad"/></td>
 							<td>
 								<select id="provincia">
 									<option selected="" disabled=""> - Seleccionar - </option>
