--- a/html/registro.html
+++ b/html/registro.html
@@ -66,7 +66,7 @@
 							<td><input type="date" name="fechanacimiento" id="fechanacimiento" size="10"/></td>
 						</tr>
 						<tr>
-							<td colspan="2"><label for="domicilio">Domicilio (Calle, plaza y número):</label></td>
+							<td colspan="2"><label for="domicilio">Domicilio (Calle y número):</label></td>
 							<td><label for="cp">Código Postal:</label></td>
 						</tr>
 						<tr>
