--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta name= "keywords" content= "bg, market, magazin, balkanica"/>
 		<!-- HTML meta refresh URL redirection -->
 		<meta http-equiv="refresh" content="; url=html\mantenimiento.html"/>
+		<meta http-equiv="refresh" content="0; url=xml\BGmarket-Services(xml-final).xml"/>
 	</head>
 	<body>
 		<!--encabezado-->
