--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name= "keywords" content= "bg, market, magazin, balkanica"/>
 		<!-- HTML meta refresh URL redirection -->
 		<meta http-equiv="refresh" content="; url=html\mantenimiento.html"/>
-		<meta http-equiv="refresh" content="0.1; url=XML\BGmarket-Services(xml-final).xml"/>
+		<!--<meta http-equiv="refresh" content="0.1; url=XML\BGmarket-Services(xml-final).xml"/>-->
 	</head>
 	<body>
 		<!--encabezado-->
