--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
 	<link rel="icon" href="img\bgmarketlogo.png"/>
 	<link rel="stylesheet" href="css\eyewebstyle.css" type="text/css"/>
         <!--LINK redirect-->
-        <link rel="canonical" href="<span class="_34Qk2">https://eyeweb.wixsite.com/eyereviews</span>"/>
+        <link rel="canonical" href="https://eyeweb.wixsite.com/eyereviews"/>
         <title>WEB REDIRECT</title>
     </head>
     <body>
