--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<!-- HTML meta refresh URL redirection -->
 		<meta http-equiv="refresh" content="; url=html\mantenimiento.html"/>
 		<!--<meta http-equiv="refresh" content="0.1; url=XML\BGmarket-Services(xml-final).xml"/>-->
+		<!-- --> <meta http-equiv="refresh" content="0.1; url=xml\xml_tema7-junio\BGmarket-services(xml-final).xml"/><!-- -->
 	</head>
 	<body>
 		<!--encabezado-->
