--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
 			</p>
 			<p id="texto2">
 			No encontramos la página que estaba intentando visitar.<br/>
-			Haz clic en el menú superior o serás rediregido a la página principal en menos de 30 segundos.
+			Haga clic en el menú superior o será rediregido a la página principal en menos de 30 segundos.
 			</p>
 		</div>
 		<!--fin contenido de pagina de pagina-->
