--- a/404.html
+++ b/404.html
@@ -3,11 +3,11 @@
 	<head>
 		<title>BGMarket</title>
 		<meta charset="UTF-8"/>
-		<link rel="icon" href="img\bgmarketlogo.png"/>
-		<link rel="stylesheet" href="css\eyewebstyle.css" type="text/css"/>
+		<link rel="icon" href="..\..\img\bgmarketlogo.png"/>
+		<link rel="stylesheet" href="..\..\css\eyewebstyle.css" type="text/css"/>
 		<meta name= "keywords" content= "bg, market, magazin, balkanica"/>
 		<!-- HTML meta refresh URL redirection -->
-		<meta http-equiv="refresh" content="30; url=index.html"/>
+		<meta http-equiv="refresh" content="30; url=..\..\index.html"/>
 	</head>
 	<body>
 		<!--encabezado-->
@@ -15,15 +15,15 @@
 			<table>
 				<tr>
 					<td>
-						<a href="index.html"><img type="img" id="logo" src="img\bgmarketlogo.png" alt="BGMarketLogo"/></a>
+						<a href="..\..\index.html"><img type="img" id="logo" src="..\..\img\bgmarketlogo.png" alt="BGMarketLogo"/></a>
 					</td>
 					<td>
 						<ul class="navbar">
-							  <li><a href="index.html">Inicio</a></li>
-							  <li><a href="html\productos.html">Productos</a></li>
-							  <li><a href="html\contacto.html">Contacto</a></li>
-							  <li><a href="html\quienes.html">Quiénes somos</a></li>
-							  <li><a href="html\registro.html">Registro</a></li>
+							  <li><a href="..\..\index.html">Inicio</a></li>
+							  <li><a href="..\..\html\productos.html">Productos</a></li>
+							  <li><a href="..\..\html\contacto.html">Contacto</a></li>
+							  <li><a href="..\..\html\quienes.html">Quiénes somos</a></li>
+							  <li><a href="..\..\html\registro.html">Registro</a></li>
 						</ul>
 					</td>
 				</tr>
