--- a/html/prueba.html
+++ b/html/prueba.html
@@ -12,7 +12,7 @@
 			<table>
 				<tr>
 					<td>
-						<a href=""><img type="img" id="logo" src="..\img\bgmarketlogo.png" alt="BGMarketLogo"/></a>
+						<a href=""><img type="img" id="logo" src="..\img\eyesupportlogo.png" alt="EYEsupportLogo"/></a>
 					</td>
 				</tr>
 			</table>
@@ -25,7 +25,7 @@
 		<!--fin contenido de pagina de pagina-->
 		<!--pie de pagina-->
 		<footer>
-			<p>EYEsupport	&nbsp;	Correo: </p>
+			<p>EYEsupport	&nbsp;	Correo: eyereviews@protonmail.com</p>
 			<p>©Copyright 2021 | designed by: E.Y.E.</p>
 		</footer>
 		<!--fin pie de pagina-->
